change gitconfig to self,rm link gitconfig

--- a/git-config/.gitconfig
+++ b/git-config/.gitconfig
@@ -1,6 +1,6 @@
 [user]
-    name = bestswifter
-    email = ktzhang@bestswifter.com
+    name = PiaoL
+    email = gailungg@gmail.com
 [color]
     diff = auto
     status = auto
