--- a/git-config/.gitconfig
+++ b/git-config/.gitconfig
@@ -1,6 +1,7 @@
 [user]
-	name = piaoL
+	name = PiaoL
     email = gailungg@gmail.com
+    # email = 653957765@qq.com
 [color]
     diff = auto
     status = auto
